--- a/listenup/microservices/flucoma_service/Dockerfile
+++ b/listenup/microservices/flucoma_service/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.12
+FROM --platform=linux/amd64 python:3.12
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y wget tar && rm -rf /var/lib/apt/lists/*
 
 
-# Install FluCoMa CLI
+# Install FluCoMa CLI (Linux x64 - container will run in x64 mode)
 RUN wget -O /tmp/FluCoMa-CLI-Linux-x64.tar.gz https://github.com/flucoma/flucoma-cli/releases/download/1.0.9/FluCoMa-CLI-Linux-x64.tar.gz \
     && mkdir -p /opt/flucoma-cli \
     && tar -xzf /tmp/FluCoMa-CLI-Linux-x64.tar.gz -C /opt/flucoma-cli \
