--- a/listenup/microservices/flucoma_service/Dockerfile
+++ b/listenup/microservices/flucoma_service/Dockerfile
@@ -3,7 +3,6 @@ FROM --platform=linux/amd64 python:3.12
 # Install system dependencies
 RUN apt-get update && apt-get install -y wget tar && rm -rf /var/lib/apt/lists/*
 
-
 # Install FluCoMa CLI (Linux x64 - container will run in x64 mode)
 RUN wget -O /tmp/FluCoMa-CLI-Linux-x64.tar.gz https://github.com/flucoma/flucoma-cli/releases/download/1.0.9/FluCoMa-CLI-Linux-x64.tar.gz \
     && mkdir -p /opt/flucoma-cli \
@@ -14,15 +13,17 @@ RUN wget -O /tmp/FluCoMa-CLI-Linux-x64.tar.gz https://github.com/flucoma/flucoma
 ENV PATH="/opt/flucoma-cli/FluCoMa-CLI-Linux-x64:$PATH"
 ENV FLUCOMA_BIN_DIR="/opt/flucoma-cli/FluidCorpusManipulation/bin"
 
-# Copy microservice code and shared modules
+# Set up working directory
 WORKDIR /app
-COPY microservices/flucoma_service/app.py ./
+
+# Copy only requirements files for dependency installation
 COPY requirements/ ./requirements/
-COPY microservices/flucoma_service/requirements.txt ./flucoma_service/
-# Copy both shared directories to avoid name collisions
-COPY shared /app/shared
-COPY microservices/shared /app/microservices_shared
+COPY microservices/flucoma_service/requirements.txt ./microservices/flucoma_service/
 
-RUN pip install --no-cache-dir -r flucoma_service/requirements.txt
+# Install Python dependencies
+RUN pip install --no-cache-dir -r microservices/flucoma_service/requirements.txt
 
-CMD ["python", "app.py"]
+# Note: Source code will be mounted as volumes in docker-compose.yml
+# This allows for live code updates without rebuilding the container
+
+CMD ["python", "microservices/flucoma_service/app.py"]
