--- a/ui-experiments/overtones/package.json
+++ b/ui-experiments/overtones/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "spectral-audio-synthesizer",
+  "name": "sine-language",
   "version": "1.0.0",
-  "description": "Web-based spectral audio synthesizer with overtone harmonic series",
+  "description": "Web-based harmonic series explorer",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "npm-run-all --parallel build:css:start node-server",
+    "build:css:start": "npx @tailwindcss/cli -i ./css/tailwind.css -o ./css/styles-compiled.css --watch",
+    "node-server": "node server.js",
+    "build:css:prod": "npx @tailwindcss/cli -i ./css/tailwind.css -o ./css/styles-compiled.css --minify"
   },
   "dependencies": {
     "express": "^4.21.2"
@@ -18,5 +21,11 @@
     "webaudio"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
+  }
 }
